# Benchforge

./: README.md  hello.py  pyproject.toml
app/: sorts.py
benchforge/: main.py
benchforge/data/: generation.py  model.py
benchforge/pipeline/: process.py  result.py
benchforge/visual/: display.py
